added Lastes News Section

--- a/public/index.html
+++ b/public/index.html
@@ -832,9 +832,7 @@
           </div>
           <div class="section-content row">
             <div class="col">
-              <div
-                class="col-content"
-              >
+              <div class="col-content">
                 <div class="app-image">
                   <div
                     class="app-phone"
@@ -858,9 +856,7 @@
                         target="_blank"
                         class="app-link"
                       >
-                        <div
-                          class="app apple"
-                        >
+                        <div class="app apple">
                           <span>Yüklə</span>
                           <p>App Store</p>
                         </div>
@@ -872,9 +868,7 @@
                         target="_blank"
                         class="app-link"
                       >
-                        <div
-                          class="app android"
-                        >
+                        <div class="app android">
                           <span>Yüklə</span>
                           <p>Google Play</p>
                         </div>
@@ -886,9 +880,7 @@
                         target="_blank"
                         class="app-link"
                       >
-                        <div
-                          class="app huawei"
-                        >
+                        <div class="app huawei">
                           <span>Yüklə</span>
                           <p>AppGallery</p>
                         </div>
@@ -903,9 +895,7 @@
                 <div class="col-title">
                   <b>Valyuta məzənnələri</b>
                   <div class="change-rates">
-                    <a href="javascript:void(0)" class="active-rate"
-                      >Nağd</a
-                    >
+                    <a href="javascript:void(0)" class="active-rate">Nağd</a>
                     <div class="select-box">
                       <div class="select-content">
                         <ul>
@@ -928,7 +918,11 @@
                       value=""
                       class="selling-input"
                     />
-                    <select name="from" class="s-currency" style="background-image: url(images/s_curr.svg);">
+                    <select
+                      name="from"
+                      class="s-currency"
+                      style="background-image: url(images/s_curr.svg)"
+                    >
                       <option value="AZN" selected="">AZN</option>
                       <option value="USD">USD</option>
                       <option value="EUR">EUR</option>
@@ -936,7 +930,11 @@
                   </div>
                   <div class="c-line">
                     <span class="c-buying">Alıram</span>
-                    <select name="to" class="s-currency" style="background-image: url(images/s_curr.svg);">
+                    <select
+                      name="to"
+                      class="s-currency"
+                      style="background-image: url(images/s_curr.svg)"
+                    >
                       <option value="AZN" style="display: none">AZN</option>
                       <option value="USD" selected="">USD</option>
                       <option value="EUR">EUR</option>
@@ -992,6 +990,69 @@
                 >
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Latest news  -->
+
+      <section class="lastest-news">
+        <div class="container">
+          <div class="section-title">
+            <b>Son xəbərlər</b>
+          </div>
+          <div class="section-content row">
+            <div class="col">
+              <div class="col-content">
+                <a href="#">
+                  <div class="news-desc">
+                    <b>Yelo Bank-da növbəti sağlamlıq tədbiri </b>
+                    <div class="news-foot">
+                      <span
+                        class="arr-btn">
+                        Daha ətraflı
+                        </span>
+                      <time>4 Noyabr 2023</time>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col">
+              <div class="col-content">
+                <a href="#">
+                  <div class="news-desc">
+                    <b>Yelo Bank-ın dəstəyi ilə tələbələr üçün “KaryeramIZ” forumu baş tutub</b>
+                    <div class="news-foot">
+                      <span
+                        class="arr-btn">
+                        Daha ətraflı
+                        </span>
+                      <time>3 Noyabr 2023</time>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col">
+              <div class="col-content">
+                <a href="#">
+                  <div class="news-desc">
+                    <b>Yelo Bank-da 10-dan sərfəli kredit var!</b>
+                    <div class="news-foot">
+                      <span
+                        class="arr-btn">
+                        Daha ətraflı
+                        </span>
+                      <time>2 Noyabr 2023</time>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="news-link">
+            <a href="news.html">Bütün xəbərlər</a>
           </div>
         </div>
       </section>
