--- a/public/index.html
+++ b/public/index.html
@@ -1008,10 +1008,7 @@
                   <div class="news-desc">
                     <b>Yelo Bank-da növbəti sağlamlıq tədbiri </b>
                     <div class="news-foot">
-                      <span
-                        class="arr-btn">
-                        Daha ətraflı
-                        </span>
+                      <span class="arr-btn"> Daha ətraflı </span>
                       <time>4 Noyabr 2023</time>
                     </div>
                   </div>
@@ -1022,12 +1019,12 @@
               <div class="col-content">
                 <a href="#">
                   <div class="news-desc">
-                    <b>Yelo Bank-ın dəstəyi ilə tələbələr üçün “KaryeramIZ” forumu baş tutub</b>
+                    <b
+                      >Yelo Bank-ın dəstəyi ilə tələbələr üçün “KaryeramIZ”
+                      forumu baş tutub</b
+                    >
                     <div class="news-foot">
-                      <span
-                        class="arr-btn">
-                        Daha ətraflı
-                        </span>
+                      <span class="arr-btn"> Daha ətraflı </span>
                       <time>3 Noyabr 2023</time>
                     </div>
                   </div>
@@ -1040,10 +1037,7 @@
                   <div class="news-desc">
                     <b>Yelo Bank-da 10-dan sərfəli kredit var!</b>
                     <div class="news-foot">
-                      <span
-                        class="arr-btn">
-                        Daha ətraflı
-                        </span>
+                      <span class="arr-btn"> Daha ətraflı </span>
                       <time>2 Noyabr 2023</time>
                     </div>
                   </div>
@@ -1057,6 +1051,219 @@
         </div>
       </section>
     </main>
+
+    <footer>
+      <div class="container">
+        <nav class="foot-nav">
+          <div>
+            <h3><a href="#">Fərdi</a></h3>
+            <ul>
+              <li><a href="loans.html">Kreditlər</a></li>
+              <li><a href="cards.html">Kartlar</a></li>
+              <li><a href="#">Əmanətlər</a></li>
+              <li>
+                <a href="#">Pul köçürmələri</a>
+              </li>
+              <li>
+                <a href="#">Kart xidmətləri</a>
+              </li>
+              <li><a href="#">Tariflər</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3><a href="#">Biznes</a></h3>
+            <ul>
+              <li><a href="loans.html">Biznes Kreditlər</a></li>
+              <li><a href="cards.html">Kartlar</a></li>
+              <li>
+                <a href="#">Biznes xidmətlər</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3><a href="#">Bank haqqında</a></h3>
+            <ul>
+              <li><a href="#">Rəhbərlik</a></li>
+              <li><a href="#">Karyera</a></li>
+              <li><a href="#">Hesabatlar</a></li>
+              <li><a href="#">Komitələr</a></li>
+              <li><a href="#">Sənədlər</a></li>
+              <li><a href="news.html">Xəbərlər</a></li>
+            </ul>
+          </div>
+          <div>
+            <h3>
+              <a href="#">Onlayn xidmətlər</a>
+            </h3>
+            <ul>
+              <li>
+                <a href="#">Online kredit sifarişi</a>
+              </li>
+              <li>
+                <a href="#">Kart sifarişi</a>
+              </li>
+              <li>
+                <a href="#">Online kredit ödənişi</a>
+              </li>
+              <li>
+                <a href="#">Onlayn ödəmə</a>
+              </li>
+              <li>
+                <a href="#">Onlayn növbə</a>
+              </li>
+              <li>
+                <a href="#">ƏDV geri al</a>
+              </li>
+              <li>
+                <a href="#">ASAN pay </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <div class="foot-top">
+          <ul class="socials">
+            <li>
+              <a
+                href="https://www.facebook.com/yelo.az"
+                target="_blank"
+                class="social"
+                style="background-image: url(images/f.svg)"
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/yelobank/"
+                target="_blank"
+                class="social"
+                style="background-image: url(images/i.svg)"
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/company/yelo-bank/"
+                target="_blank"
+                class="social"
+                style="background-image: url(images/l.svg)"
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UCz7siujqcwxQz3OcWqK5NLQ"
+                target="_blank"
+                class="social"
+                style="background-image: url(images/y.svg)"
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://twitter.com/yelo_bank"
+                target="_blank"
+                class="social"
+                style="background-image: url(images/t.svg)"
+              ></a>
+            </li>
+          </ul>
+          <div class="show-mobile">
+            <ul>
+              <li>
+                <a
+                  href="https://apps.apple.com/az/app/yelo/id1515449668"
+                  target="_blank"
+                  class="app-link"
+                >
+                  <div class="app apple">
+                    <span>Yüklə</span>
+                    <p>App Store</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://play.google.com/store/apps/details?id=az.yelo.app&amp;hl=ru&amp;pli=1"
+                  target="_blank"
+                  class="app-link"
+                >
+                  <div class="app android">
+                    <span>Yüklə</span>
+                    <p>Google Play</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://appgallery.huawei.com/#/app/C104500649"
+                  target="_blank"
+                  class="app-link"
+                >
+                  <div class="app huawei">
+                    <span>Yüklə</span>
+                    <p>AppGallery</p>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="contact">
+            <div class="c-item">
+              <p>Bizi tap</p>
+              <b
+                ><a href="https://goo.gl/maps/KZ5JiipvukKo3Kx77" target="_blank"
+                  >Həsən bəy Zərdabi pros. 81k</a
+                ></b
+              >
+            </div>
+            <div class="c-item">
+              <p>Əlaqə nömrəsi</p>
+              <b><a href="tel:981" target="_blank">981</a></b>
+            </div>
+            <div class="c-item">
+              <p>Bizə yazın</p>
+              <b
+                ><a href="mailto:bank@yelo.az" target="_blank"
+                  >bank@yelo.az</a
+                ></b
+              >
+            </div>
+          </div>
+        </div>
+        <div class="foot-bottom">
+          <a class="logo">
+            <img src="images/logo.svg" alt="logo">
+          </a>
+          <ul>
+            <li>
+              <p>
+                © 2023 Yelo Bank | AR MB tərəfindən 25 fevral 1994-cü il
+                tarixində verilmiş 203 saylı lisenziya
+              </p>
+            </li>
+            <li><a href="https://www.e-gov.az" target="_blank">E-portal</a></li>
+            <li><a href="https://www.adif.az/" target="_blank">ADİF</a></li>
+            <li>
+              <a href="https://infobank.az/" target="_blank">infobank.az</a>
+            </li>
+            <li>
+              <a href="https://qdf.gov.az/iane-et/" target="_blank"
+                >Qarabağ Dirçəliş Fondu</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://gpp.az/WebPortal/Infosite/Sc/989000/Category/8"
+                target="_blank"
+                >YAŞAT Fondu</a
+              >
+            </li>
+          </ul>
+          <div class="me">
+            <p>Site by</p>
+            <a href="https://github.com/MuxammedL" target="_blank" 
+              >Muxammed Layicov</a
+            >
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../src/js/main.js"></script>
