--- a/public/index.html
+++ b/public/index.html
@@ -1267,6 +1267,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../src/js/main.js"></script>
+    <script src="../src/js/home.js"></script>
     <script src="../src/js/swiper.js"></script>
   </body>
 </html>
