--- a/public/news.html
+++ b/public/news.html
@@ -407,110 +407,7 @@
           </div>
           <div class="context">
             <ul class="news-list-total">
-              <li>
-                <div class="news-item">
-                  <a href="#">
-                    <div class="news-desc">
-                      <b>Yelo Bank-da növbəti sağlamlıq tədbiri </b>
-                      <div class="news-foot">
-                        <span class="arr-btn"> Daha ətraflı </span>
-                        <time>4 Noyabr 2023</time>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="news-item">
-                  <a href="#">
-                    <div class="news-desc">
-                      <b>Yelo Bank-da növbəti sağlamlıq tədbiri </b>
-                      <div class="news-foot">
-                        <span class="arr-btn"> Daha ətraflı </span>
-                        <time>4 Noyabr 2023</time>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="news-item">
-                  <a href="#">
-                    <div class="news-desc">
-                      <b>Yelo Bank-da növbəti sağlamlıq tədbiri </b>
-                      <div class="news-foot">
-                        <span class="arr-btn"> Daha ətraflı </span>
-                        <time>4 Noyabr 2023</time>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="news-item">
-                  <a href="#">
-                    <div class="news-desc">
-                      <b>Yelo Bank-da növbəti sağlamlıq tədbiri </b>
-                      <div class="news-foot">
-                        <span class="arr-btn"> Daha ətraflı </span>
-                        <time>4 Noyabr 2023</time>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="news-item">
-                  <a href="#">
-                    <div class="news-desc">
-                      <b>Yelo Bank-da növbəti sağlamlıq tədbiri </b>
-                      <div class="news-foot">
-                        <span class="arr-btn"> Daha ətraflı </span>
-                        <time>4 Noyabr 2023</time>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="news-item">
-                  <a href="#">
-                    <div class="news-desc">
-                      <b>Yelo Bank-da növbəti sağlamlıq tədbiri </b>
-                      <div class="news-foot">
-                        <span class="arr-btn"> Daha ətraflı </span>
-                        <time>4 Noyabr 2023</time>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="news-item">
-                  <a href="#">
-                    <div class="news-desc">
-                      <b>Yelo Bank-da növbəti sağlamlıq tədbiri </b>
-                      <div class="news-foot">
-                        <span class="arr-btn"> Daha ətraflı </span>
-                        <time>4 Noyabr 2023</time>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
-              <li>
-                <div class="news-item">
-                  <a href="#">
-                    <div class="news-desc">
-                      <b>Yelo Bank-da növbəti sağlamlıq tədbiri </b>
-                      <div class="news-foot">
-                        <span class="arr-btn"> Daha ətraflı </span>
-                        <time>4 Noyabr 2023</time>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </li>
+              
             </ul>
 
             <div class="news-link">
@@ -736,8 +633,7 @@
       </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../src/js/main.js"></script>
-    <script src="../src/js/swiper.js"></script>
+    <script src="../src/js/news.js"></script>
   </body>
 </html>
