adding newsAdd method

--- a/public/news.html
+++ b/public/news.html
@@ -118,12 +118,12 @@
               <h2>Xəbər Əlavə et</h2>
             </div>
             <div class="content-text">
-              <form>
+              <form novalidate id="addNewsForm">
                 <div class="group">
                   <label for="newsname">Xəbər başlığı</label>
                   <textarea name="title" id="newsname" placeholder="Bir şey yazın..."></textarea>
                 </div>
-                <button class="add-button">Əlavə et</button>
+                <button type="submit" class="add-button">Əlavə et</button>
               </form>
             </div>
           </div>
