adding cards page

--- a/public/news.html
+++ b/public/news.html
@@ -131,7 +131,7 @@
       </div>
     </div>
 
-    <header>
+    <header class="news_page">
       <div class="header-top">
         <div class="wrapper">
           <div class="section-nav">
