--- a/public/cards.html
+++ b/public/cards.html
@@ -604,8 +604,9 @@
                 </ul>
               </div>
               <div class="c_image">
-                <div class="c_image_inner">
+                <div class="c_image_inner js-tilt">
                   <img src="../public/images/yelo.png" />
+                  <div class="shine"></div>
                 </div>
               </div>
             </div>
@@ -892,10 +893,10 @@
         </div>
       </div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../src/js/main.js"></script>
     <script src="../src/js/cards.js"></script>
     <script src="../src/js/swiper.js"></script>
+    </script>
   </body>
 </html>
