begining of loans.page

--- a/public/cards.html
+++ b/public/cards.html
@@ -13,10 +13,11 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="../src/scss/style.css" />
-    <title>Yelo Bank - Müasir Bank Xidmətləri</title>
+    <title>Pulsuz Online Kart Sifarisi: Bank Kartlari - Plastik Kart Sifarişi</title>
   </head>
 
   <body>
+
     <div class="mobile-top" style="background-image: url(images/modal_bg.webp)">
       <div class="mobile-top-inner">
         <div class="logo-side">
@@ -566,50 +567,7 @@
       <section id="cards">
         <div class="container">
           <div class="cards">
-            <div
-              class="card"
-              style="background-image: url(../public/images/yelo_block.svg)"
-            >
-              <div class="c_about">
-                <div class="c_title">Yelo Light</div>
-                <div class="c_desc">
-                  Yelo kart rahatlıq anlayışını dəyişəcək - rahat
-                  xərcləyəcəksən, rahat izləyəcəksən, qazanacaqsan, endirimlər
-                  alacaqsan.
-                </div>
-                <div class="c_spec">
-                  <div class="c_item">
-                    <p>Müddət</p>
-                    <b>1 il / 3 il</b>
-                  </div>
-                  <div class="c_item">
-                    <p>Valyuta</p>
-                    <b>AZN / USD / EUR</b>
-                  </div>
-                  <div class="c_item">
-                    <p>Cashback</p>
-                    <b>30%-dək</b>
-                  </div>
-                </div>
-                <ul>
-                  <li>
-                    <a href="#" class="curved-btn"><span>Sifariş et</span></a>
-                  </li>
-                  <li>
-                    <a href="#" class="more-details">
-                      <span>Daha ətraflı</span>
-                      <img src="images/bl_arr_bttn.svg" alt="bl_arr_bttn" />
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="c_image">
-                <div class="c_image_inner js-tilt">
-                  <img src="../public/images/yelo.png" />
-                  <div class="shine"></div>
-                </div>
-              </div>
-            </div>
+            
           </div>
         </div>
       </section>
