added loans in db.json

--- a/public/cards.html
+++ b/public/cards.html
@@ -13,11 +13,12 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="../src/scss/style.css" />
-    <title>Pulsuz Online Kart Sifarisi: Bank Kartlari - Plastik Kart Sifarişi</title>
+    <title>
+      Pulsuz Online Kart Sifarisi: Bank Kartlari - Plastik Kart Sifarişi
+    </title>
   </head>
 
   <body>
-
     <div class="mobile-top" style="background-image: url(images/modal_bg.webp)">
       <div class="mobile-top-inner">
         <div class="logo-side">
@@ -317,7 +318,7 @@
                   <a href="loans.html">Kreditlər</a>
                 </li>
                 <li>
-                  <a href="cards.html">Kartlar</a>
+                  <a href="cards.html" class="active">Kartlar</a>
                 </li>
                 <li>
                   <a href="№">Əmanətlət</a>
@@ -566,9 +567,7 @@
 
       <section id="cards">
         <div class="container">
-          <div class="cards">
-            
-          </div>
+          <div class="cards"></div>
         </div>
       </section>
 
@@ -855,6 +854,5 @@
     <script src="../src/js/main.js"></script>
     <script src="../src/js/cards.js"></script>
     <script src="../src/js/swiper.js"></script>
-    </script>
   </body>
 </html>
